Fixing the align problems in the podcast list table

--- a/antxetamedia/static/css/lists.sass
+++ b/antxetamedia/static/css/lists.sass
@@ -94,7 +94,7 @@ p#nothingFound
     td
       background: tint($green, 80%)
       vertical-align: top
-      padding: .5rem
+      padding: .2rem 1rem
       border-bottom: tint(black, 95%) solid .15rem
       &.folder
         width: 65%
@@ -103,6 +103,7 @@ p#nothingFound
         width: 15%
       &.podcastDate
         font-size: .8rem
+        padding-top: .6em
         width: 20%
     span.podcastTitle
       width: 80%
